examples/errors/raise_concat.zn
void main(){
    string msg = "error"
    string detail = ": invalid operation"
    raise msg + detail
}
